
12-08-05 mfp Added member template to ParameterSet to allow adding
parameters to an existing ParameterSet object.

NOTE: ParameterSets don't seem to deal well with 'infinity' as a value
of a double; see the commented-out line in ps_t.cppunit.cc that causes
a failed test. Similarly, ParameterSets don't deal well with NaN as a
value for a double.


14-07-05 jbk
Changed the exceptions from std::runtime_error to edm::Exception.
It is still unclear what the best route is for identifying
exceptions from this package.  Currently nearly all types
are edm::Exception with category "Configuration".  The constructor
message string includes "Invalid" or a string related to the 
place where the error occurred.  Another approach could be to
just use cms::Exception in a derived class, where the category
would be the derived class name and the message string could
be from a constructor argument.  This class could include
information in the message about the fact that this is
the parameterset package.  Currently many of the throw
exceptions include this information in the thrown data.

18-07-05 jbk
Changed the process pset visit function that creates a pset
that is contained within a process section of the configuration file.
(visitPSet)  Now this function adds the the child pset to the 
process pset.

07-09-05 jbk
Found out that endpath was not implemented! Now it is.  Many
endpaths can be specified.  I was careful to sort them to the
end and retain the relative order of path and endpath 
statements from the original file.  The testing is woefully
inadequate.
