@@ -1,0 +1,19 @@
+#ifndef ParameterSet_ParameterSetfwd_h
+#define ParameterSet_ParameterSetfwd_h
+
+/*----------------------------------------------------------------------
+
+Forward declarations of types and functions in the ParameterSet system.
+
+NOTE: This is *very* incomplete.
+
+----------------------------------------------------------------------*/
+
+namespace edm
+{
+  class ParameterSet;
+  class FileInPath;
+}
+
+#endif
+
